// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tabbar-item create 1`] = `
<div class="weui-tabbar__item">
  <p class="weui-tabbar__label"></p>
</div>
`;

exports[`tabbar-item text 1`] = `
<div class="weui-tabbar__item">
  <p class="weui-tabbar__label">test</p>
</div>
`;
